[tool.poetry]
name = "youtubescanner"
version = "0.1.0"
description = ""
authors = ["Yeldos Balgabkeov <balgabekov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.7.3"
google-api-python-client = "^1.12.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
